# toggl-to-sheets

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  release.toml  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yaml
k8s/base/: app.yaml  kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
src/: main.rs
