[package]
name = "toggl-to-sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
# For Async Runtime
tokio = { version = "1.0", features = ["full"] }

# For HTTP Requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

# For JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For Google Sheets API
google-sheets4 = "6.0"

# For Environment Variables
dotenv = "0.15"

# For Date and Time handling
chrono = { version = "0.4", features = ["serde"] }
