[package]
name = "toggl-to-sheets"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[dependencies]
# For Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Cron jobs/scheduled tasks
tokio-cron-scheduler = { version = "0.15.1", features = ["english"] }

# For HTTP Requests
reqwest = { version = "0.11", features = [
	"json",
	"blocking",
	"rustls-tls",
], default-features = false }

# For JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For Google Sheets API
google-sheets4 = "6.0"

# For Environment Variables
dotenv = "0.15"

# Handle application configuration from multiple sources
config = "0.15.19"

# For Date and Time handling
chrono = { version = "0.4", features = ["serde"] }

# Nice error handling
anyhow = "1.0.100"

# Telemetry
opentelemetry-tracing-utils = "0.8"
tracing = "0.1.41"
